# nmslib

./: .gitignore
python_bindings/: CMakeLists.txt  nmslib.cc  setup.py
query_server/cpp_client_server/: QueryClient.cpp  QueryService_server.cpp
similarity_search/: CMakeLists.txt
similarity_search/include/: knnqueue.h  object.h
similarity_search/include/factory/: init_spaces.h
similarity_search/include/factory/space/: space_hamming.h
similarity_search/include/space/: space_hamming.h  space_vector.h  space_vector_gen_mmap.h
similarity_search/src/method/: hnsw.cc
similarity_search/src/space/: space_hamming.cc  space_vector.cc
